@@ -21,14 +21,39 @@ import os
 from libconfix.core.iface.proxy import InterfaceProxy
 from libconfix.core.filesys import scan
 from libconfix.core.utils.error import Error
+from libconfix.core.utils import external_cmd
 
 class MakeCallerInterfaceProxy(InterfaceProxy):
     def __init__(self, caller):
         InterfaceProxy.__init__(self)
         self.__caller = caller
         self.add_global('CALL_MAKE_AND_RESCAN', getattr(self, 'CALL_MAKE_AND_RESCAN'))
+        self.add_global('CALL_MAKE_AND_RESCAN_SYNC', getattr(self, 'CALL_MAKE_AND_RESCAN_SYNC'))
         pass
     def CALL_MAKE_AND_RESCAN(self, filename='Makefile', args=[]):
+        """
+        Create a builder object that calls make when it is
+        enlarge()d. This means that make is called in a deferred way,
+        not at the time the method is called.
+        """
         self.__caller.add_call(filename=filename, args=args)
+        pass
+    def CALL_MAKE_AND_RESCAN_SYNC(self, filename='Makefile', args=[]):
+        """
+        Call make immediately, and rescan the directory. This is done
+        synchronously, so that the caller can be sure that make has
+        been called when the function returns.
+        """
+        cwd = self.__caller.parentbuilder().directory()
+        
+        external_cmd.exec_program(
+            program='make',
+            dir=cwd.abspath(),
+            args=['-f', filename] + args)
+        pass
+
+        # make might have had side effects that we don't see
+        scan.rescan_dir(cwd)
+        
         pass
     pass
