@@ -1,3 +1,7 @@
+2007-02-11 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
+
+	* plugins.make.iface: new method CALL_MAKE_AND_RESCAN_SYNC()
+
 2007-02-07 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
 
 	* Bug fix: "[ 1654643 ] URGENCY_ERROR require need not be resolved
